--- a/src/styles/home_footer.css
+++ b/src/styles/home_footer.css
@@ -5,14 +5,13 @@
 }
 
 @media only screen and (max-width: 475px) {
-    /* For mobile phones: */
-    [class*="home-footer-nav"] {
-        width: 300px;
-        display: flex;
-        flex-direction: column;
-        justify-content: left;
-        text-align: left;
-    }
+  .home-footer-nav {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    text-align: left;
+  }
 }
 
 .home-footer-nav a {
